fixed background color overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #000f28;
+  background-color: #fff;
 }
 
 #total {
